--- a/index.org
+++ b/index.org
@@ -9,6 +9,8 @@
 
 Rethink is a css theme targeted at org mode. Rethink was inspired by its cousin [[https://jessekelly881-imagine.surge.sh/][Imagine]] and HTML5 UP's theme [[https://html5up.net/story][Story]]
 
+Rethink is available on Github [[https://github.com/jessekelly881/Theme-Rethink][here]]. To use rethink add the following headers to your org document:
+
 #+BEGIN_SRC org
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="blog.css" />
 #+OPTIONS: toc:nil num:nil html-style:nil
